# X_props

./: .gitignore  LICENSE  README.md  module_xprops.ipynb  pyproject.toml  xsprops.py  xsprops_plot.py
examples/: basic_usage.py  module_xprops.ipynb
